--- a/css/header.css
+++ b/css/header.css
@@ -66,7 +66,7 @@ nav.mob_gnb>ul>li:nth-of-type(5).on>a{background-position-y: -25px;}
 
 nav.mob_gnb>ul>li>ul{display: none;}
 nav.mob_gnb>ul>li.on>ul{display: block;}
-nav.mob_gnb>ul>li.on>ul{position: absolute; left: 0; display: block; width: 100%; height: ;  background: #eaeaea;}
+nav.mob_gnb>ul>li.on>ul{position: absolute; left: 0; display: block; width: 100%; height:100% ;  background: #eaeaea;}
 nav.mob_gnb>ul>li.on>ul>li{width: 100%; height: 42px; padding: 0 30px; box-sizing: border-box;}
 nav.mob_gnb>ul>li.on>ul>li>a{color: #222; font-size: 16px; line-height: 42px; transition: all 200ms linear 150ms; }
 nav.mob_gnb>ul>li.on>ul>li>a:hover{text-decoration: underline; color:#f4790b;}
